Truncated why recommendations so that the text wouldn't overflow the container. In addition, fixed the upload file / create project text in the corner case of a small browswer window. Aligned the uploaded files header to be centered, and fixed the uploaded files so they are each centered as well

--- a/frontend/src/projectSelection.css
+++ b/frontend/src/projectSelection.css
@@ -135,7 +135,6 @@
 }
 
 .warningtext {
-    position: absolute !important;
-    align-self: center !important;
-    top: 45% !important;
+    position: relative;
+    top: 15vh;
 }
